# cameras-pose-optimization

./: .gitignore  CMakeLists.txt  README.md
config/: default_config.yaml
include/: camera.hpp  config_reader.hpp  robot.hpp
src/: camera.cpp  camera_geometry.cpp  camera_geometry.hpp  color_test.cpp  config_reader.cpp  main.cpp  robot.cpp  volume_test.cpp
